# cloud-hypervisor-client

./: Cargo.toml
generator/workdir/: openapi-generator.yaml
src/apis/: configuration.rs  default_api.rs
src/models/: console_config.rs  console_mode.rs  core_scheduling_mode.rs  cpus_config.rs  debug_console_config.rs  disk_config.rs  generic_vhost_user_config.rs  image_type.rs  lock_granularity.rs  memory_restore_mode.rs  mod.rs  net_config.rs  platform_config.rs  restore_config.rs  send_migration_data.rs  timeout_strategy.rs  vm_config.rs  vm_info.rs  vm_state.rs
