[package]
name = "cloud-hypervisor-client"
version = "0.4.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>", "Cappy Ishihara <cappy@fyrastack.com>"]
edition = "2021"
rust-version = "1.81.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Unofficial Rust crate for accessing the cloud-hypervisor REST API"
repository = "https://github.com/lpotthast/cloud-hypervisor-client"
keywords = ["cloud-hypervisor", "REST-API"]
categories = ["api-bindings", "web-programming"]

[dependencies]
base64 = "~0.7.0"
futures = "^0.3"
http = "~0.2"
http-body-util = { version = "0.1" }
hyper = { version = "^1.3.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }
hyperlocal = "0.9.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
